fix: Fix alignment of the class .text--right

--- a/assets/stylesheets/components/text.css
+++ b/assets/stylesheets/components/text.css
@@ -11,7 +11,7 @@
 }
 
 .text--right {
-    text-align: center;
+    text-align: right;
 }
 
 .text--small {
